{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 567,
  "lineage": "8d9a2585-3a4d-5762-5757-f6aa2a5a9cf5",
  "resources": [
    {
      "module": "module.aks_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "SystemSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/21",
            "address_prefixes": [
              "10.0.0.0/21"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/SystemSubnet",
            "name": "SystemSubnet",
            "resource_group_name": "ContosoProdRG",
            "virtual_network_name": "ContosoProdAksVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.aks_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "UserSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.16.0/20",
            "address_prefixes": [
              "10.0.16.0/20"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/UserSubnet",
            "name": "UserSubnet",
            "resource_group_name": "ContosoProdRG",
            "virtual_network_name": "ContosoProdAksVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.aks_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "VmSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.8.0/21",
            "address_prefixes": [
              "10.0.8.0/21"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/VmSubnet",
            "name": "VmSubnet",
            "resource_group_name": "ContosoProdRG",
            "virtual_network_name": "ContosoProdAksVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.aks_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.aks_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "85934a78-a2bc-4e8c-af67-a264fd745ece",
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet",
            "location": "eastus",
            "name": "ContosoProdAksVNet",
            "resource_group_name": "ContosoProdRG",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/21",
                "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/SystemSubnet",
                "name": "SystemSubnet"
              },
              {
                "address_prefix": "10.0.16.0/20",
                "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/UserSubnet",
                "name": "UserSubnet"
              },
              {
                "address_prefix": "10.0.8.0/21",
                "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/VmSubnet",
                "name": "VmSubnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion_host",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/publicIPAddresses/ContosoProdBastionHostPublicIp",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.242.207.219",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ContosoProdBastionHostPublicIp",
            "resource_group_name": "ContosoProdRG",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "firewalls": [
              "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/azureFirewalls/ContosoProdFirewall"
            ],
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/firewallPolicies/ContosoProdFirewallPolicy",
            "location": "eastus",
            "name": "ContosoProdFirewallPolicy",
            "resource_group_name": "ContosoProdRG",
            "rule_collection_groups": [
              "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/firewallPolicies/ContosoProdFirewallPolicy/ruleCollectionGroups/AksEgressPolicyRuleCollectionGroup"
            ],
            "sku": "Standard",
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "ApplicationRules",
                "priority": 500,
                "rule": [
                  {
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.bing.com"
                    ],
                    "name": "AllowBing",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.cdn.mscr.io",
                      "*.data.mcr.microsoft.com",
                      "*.microsoftonline.com",
                      "*.monitoring.azure.com",
                      "*.oms.opinsights.azure.com",
                      "*.opinsights.azure.com",
                      "acs-mirror.azureedge.net",
                      "dc.services.visualstudio.com",
                      "login.microsoftonline.com",
                      "management.azure.com",
                      "mcr.microsoft.com"
                    ],
                    "name": "AllowMicrosoftFqdns",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*.google.com"
                    ],
                    "name": "AllowGoogle",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "auth.docker.io",
                      "production.cloudflare.docker.com",
                      "registry-1.docker.io"
                    ],
                    "name": "AllowImagesFqdns",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "download.opensuse.org",
                      "ntp.ubuntu.com",
                      "packages.microsoft.com",
                      "security.ubuntu.com",
                      "snapcraft.io"
                    ],
                    "name": "AllowFqdnsForOsUpdates",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/firewallPolicies/ContosoProdFirewallPolicy",
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/firewallPolicies/ContosoProdFirewallPolicy/ruleCollectionGroups/AksEgressPolicyRuleCollectionGroup",
            "name": "AksEgressPolicyRuleCollectionGroup",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "NetworkRules",
                "priority": 400,
                "rule": [
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "*"
                    ],
                    "name": "Internet",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "123"
                    ],
                    "name": "Time",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "destination_addresses": [
                      "*"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "53"
                    ],
                    "name": "DNS",
                    "protocols": [
                      "UDP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "destination_addresses": [
                      "AzureActiveDirectory",
                      "AzureContainerRegistry",
                      "MicrosoftContainerRegistry"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "*"
                    ],
                    "name": "ServiceTags",
                    "protocols": [
                      "Any"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "priority": 500,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.firewall.azurerm_firewall_policy.policy"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/publicIPAddresses/ContosoProdFirewallPublicIp",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.73.255",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ContosoProdFirewallPublicIp",
            "resource_group_name": "ContosoProdRG",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.hub_network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AzureBastionSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdHubVNet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "ContosoProdRG",
            "virtual_network_name": "ContosoProdHubVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": "AzureFirewallSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.0.0/24",
            "address_prefixes": [
              "10.1.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdHubVNet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "ContosoProdRG",
            "virtual_network_name": "ContosoProdHubVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.hub_network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "guid": "07556bb2-2079-45cd-82a2-b1b70e0ea698",
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdHubVNet",
            "location": "eastus",
            "name": "ContosoProdHubVNet",
            "resource_group_name": "ContosoProdRG",
            "subnet": [
              {
                "address_prefix": "10.1.0.0/24",
                "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdHubVNet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdHubVNet/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ],
            "tags": {
              "createdWith": "Terraform"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.routetable",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/routeTables/DefaultRouteTable",
            "location": "eastus",
            "name": "DefaultRouteTable",
            "resource_group_name": "ContosoProdRG",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "kubenetfw_fw_r",
                "next_hop_in_ip_address": "10.1.0.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/SystemSubnet",
              "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/UserSubnet"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.firewall.azurerm_firewall.firewall",
            "module.firewall.azurerm_firewall_policy.policy",
            "module.firewall.azurerm_public_ip.pip",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.routetable",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "SystemSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/SystemSubnet",
            "route_table_id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/routeTables/DefaultRouteTable",
            "subnet_id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/SystemSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "data.azurerm_client_config.current",
            "module.aks_network.azurerm_virtual_network.vnet",
            "module.firewall.azurerm_firewall.firewall",
            "module.firewall.azurerm_firewall_policy.policy",
            "module.firewall.azurerm_public_ip.pip",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet",
            "module.routetable.azurerm_route_table.rt"
          ]
        },
        {
          "index_key": "UserSubnet",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/UserSubnet",
            "route_table_id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/routeTables/DefaultRouteTable",
            "subnet_id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/UserSubnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "data.azurerm_client_config.current",
            "module.aks_network.azurerm_virtual_network.vnet",
            "module.firewall.azurerm_firewall.firewall",
            "module.firewall.azurerm_firewall_policy.policy",
            "module.firewall.azurerm_public_ip.pip",
            "module.hub_network.azurerm_subnet.subnet",
            "module.hub_network.azurerm_virtual_network.vnet",
            "module.routetable.azurerm_route_table.rt"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/networkInterfaces/ContosoProdVmNic",
            "internal_domain_name_suffix": "pbfjhbn2ukge3l1hujsp03c4zg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Configuration",
                "primary": true,
                "private_ip_address": "10.0.8.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/subnets/VmSubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-52-EF-1B",
            "name": "ContosoProdVmNic",
            "private_ip_address": "10.0.8.4",
            "private_ip_addresses": [
              "10.0.8.4"
            ],
            "resource_group_name": "ContosoProdRG",
            "virtual_machine_id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Compute/virtualMachines/ContosoProdVm"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.aks_network.azurerm_subnet.subnet",
            "module.aks_network.azurerm_virtual_network.vnet",
            "module.virtual_machine.azurerm_public_ip.public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/networkInterfaces/ContosoProdVmNic|/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/networkSecurityGroups/ContosoProdVmNsg",
            "network_interface_id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/networkInterfaces/ContosoProdVmNic",
            "network_security_group_id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/networkSecurityGroups/ContosoProdVmNsg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.aks_network.azurerm_subnet.subnet",
            "module.aks_network.azurerm_virtual_network.vnet",
            "module.virtual_machine.azurerm_network_interface.nic",
            "module.virtual_machine.azurerm_network_security_group.nsg",
            "module.virtual_machine.azurerm_public_ip.public_ip"
          ]
        }
      ]
    },
    {
      "module": "module.virtual_machine",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/networkSecurityGroups/ContosoProdVmNsg",
            "location": "eastus",
            "name": "ContosoProdVmNsg",
            "resource_group_name": "ContosoProdRG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdHubVNet/virtualNetworkPeerings/ContosoProdHubVNetToContosoProdAksVNet",
            "name": "ContosoProdHubVNetToContosoProdAksVNet",
            "remote_virtual_network_id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet",
            "resource_group_name": "ContosoProdRG",
            "use_remote_gateways": false,
            "virtual_network_name": "ContosoProdHubVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.aks_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering-back",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdAksVNet/virtualNetworkPeerings/ContosoProdAksVNetToContosoProdHubVNet",
            "name": "ContosoProdAksVNetToContosoProdHubVNet",
            "remote_virtual_network_id": "/subscriptions/1cfd9c12-2c35-4462-a5f4-75403af97042/resourceGroups/ContosoProdRG/providers/Microsoft.Network/virtualNetworks/ContosoProdHubVNet",
            "resource_group_name": "ContosoProdRG",
            "use_remote_gateways": false,
            "virtual_network_name": "ContosoProdAksVNet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.hub_network.azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}